lender/tests/fail/chunk_invariant.rs
// Test that Chunk with an invariant lend type fails covariance check.

use std::cell::Cell;

use lender::{Lend, Lender, Lending};

struct InvariantChunk<L> {
    lender: L,
    size: usize,
}

impl<'lend, L> Lending<'lend> for InvariantChunk<L> {
    type Lend = &'lend Cell<Option<&'lend String>>;
}

impl<L> Lender for InvariantChunk<L> {
    lender::covariance_check!();

    fn next(&mut self) -> Option<Lend<'_, Self>> {
        None
    }
}

fn main() {}
